--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "start": "node src/main.js"
   },
   "dependencies": {
-    "express": "^4.19.2"
+    "express": "^4.19.2",
+    "cors": "^2.8.5",
+    "@google/generative-ai": "^0.12.0"
   },
   "keywords": [],
   "author": "",
