--- a/package.json
+++ b/package.json
@@ -16,6 +16,10 @@
     "ai",
     "generative-ai"
   ],
+  "dependencies": {
+    "express": "^4.19.2",
+    "cors": "^2.8.5"
+  },
   "author": "nubscript7",
   "license": "MIT",
   "bugs": {
