--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5",
-    "@google/generative-ai": "^0.12.0"
+    "@google/generative-ai": "^0.12.0",
+    "webpack": "^5.92.0"
   },
   "author": "nubscript7",
   "license": "MIT",
