--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "jest",
     "start": "node src/main.js",
-    "dev": "nodemon src/main.js",
-    "build": "webpack"
+    "dev": "nodemon src/main.js"
   },
   "repository": {
     "type": "git",
@@ -22,8 +21,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5",
-    "@google/generative-ai": "^0.12.0",
-    "webpack": "^5.92.0"
+    "@google/generative-ai": "^0.12.0"
   },
   "author": "nubscript7",
   "license": "MIT",
