--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "express": "^4.19.2",
     "cors": "^2.8.5",
+    "axios": "^1.7.2",
     "@google/generative-ai": "^0.12.0"
   },
   "author": "nubscript7",
