--- a/package.json
+++ b/package.json
@@ -24,6 +24,11 @@
     "axios": "^1.7.2",
     "@google/generative-ai": "^0.12.0"
   },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
+  },
   "author": "nubscript7",
   "license": "MIT",
   "bugs": {
