--- a/package.json
+++ b/package.json
@@ -1,29 +1,12 @@
 {
   "name": "ggmc",
-  "version": "1.1.5",
+  "version": "1.0.0",
   "description": "A Chatbot for Facebook Messenger using Facebook Messenger Chat API and Google Gemini AI API",
-  "main": "dist/index.js",
+  "main": "src/main.js",
   "scripts": {
     "test": "jest",
-    "test:server": "node dist/testserver.js",
-    "test:server-bun": "node src/testserver.ts",
-    "test:api": "node tests/api-realtest.js",
-    "start": "node build/bundle.min.js",
-    "start:preview": "node src/index.ts",
-    "start:bun": "node src/index.ts --devrun",
-    "start:bun-dev": "nodemon -w 'src/*' --exec 'bun run start:bun'",
-    "start:preview-dev": "npm run compile && npm run start:preview",
-    "start:watch-dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run ci'",
-    "start:dev": "nodemon -w 'dist/*' -e 'js' --exec 'npm run start:preview -- --devrun'",
-    "compile": "npx tsc",
-    "compile:dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run compile'",
-    "build": "npx webpack",
-    "build:bun": "bun run bunBundler.js",
-    "build:dev": "nodemon -w 'dist/*' -e 'js' --exec 'npm run build'",
-    "ci": "npm run compile && npm run start:preview -- --devrun",
-    "beautify": "find ./dist -name \"*.js\" -exec sh -c 'uglifyjs \"$1\" --beautify -o \"$1\"' sh {} \\;",
-    "production": "npm run compile && npm run build && npm run start",
-    "cleanup": "rm -rf build declarations dist && npm run production"
+    "start": "node src/index.js",
+    "dev": "nodemon src/index.js --dotenv"
   },
   "repository": {
     "type": "git",
@@ -31,40 +14,25 @@
   },
   "keywords": [
     "GGMC",
-    "wasm",
     "gemini",
     "ai",
-    "generative-ai",
-    "chatbot",
-    "facebook",
-    "messenger"
+    "generative-ai"
   ],
   "dependencies": {
-    "@google/generative-ai": "^0.12.0",
-    "axios": "^1.7.2",
-    "cors": "^2.8.5",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5",
-    "ejs": "^3.1.10",
-    "prompt-sync": "^4.2.0",
-    "dotenv": "^16.4.5"
+    "cors": "^2.8.5",
+    "axios": "^1.7.2",
+    "@google/generative-ai": "^0.12.0"
+  },
+  "jest": {
+    "moduleNameMapper": {
+      "^axios$": "axios/dist/node/axios.cjs"
+    }
   },
   "author": "nubscript7",
   "license": "MIT",
   "bugs": {
     "url": "https://github.com/NubScript7/Google-Gemini-Messenger-Chatbot/issues"
   },
-  "homepage": "https://github.com/NubScript7/Google-Gemini-Messenger-Chatbot#readme",
-  "devDependencies": {
-    "@eslint/js": "^9.5.0",
-    "eslint": "^9.5.0",
-    "globals": "^15.6.0",
-    "nodemon": "^3.1.3",
-    "jest": "^27.5.1",
-    "uglify-js": "^3.18.0",
-    "webpack-cli": "^5.1.4",
-    "glob": "^7.2.3",
-    "typescript": "^5.4.5",
-    "webpack": "^5.92.0"
-  }
+  "homepage": "https://github.com/NubScript7/Google-Gemini-Messenger-Chatbot#readme"
 }
