--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "ls": "echo $(ls)",
     "test": "jest",
     "test:server": "node dist/testserver.js",
-    "start": "node build/bundle.min.js",
+    "start": "node dist/index",
+    "start:build": "node build/bundle.min.js",
     "start:preview": "node dist/index",
     "start:preview-dev": "npm run compile || true && npm run start:preview",
     "start:watch-dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run ci'",
@@ -15,7 +16,10 @@
     "compile": "npx tsc",
     "compile:dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run compile'",
     "build": "npx webpack",
-    "build:bun": "bun run bunBundler.js",
+    "bun:start": "node build/bundle.index.min.mjs",
+    "bun:build": "node bunBundler.js",
+    "bun:preview": "node src/index",
+    "bun:preview-devrun": "node src/index --devrun",
     "build:dev": "nodemon -w 'dist/*' -e 'js' --exec 'npm run build'",
     "ci": "npm run compile && npm run start:preview -- --devrun",
     "beautify": "find ./dist -name \"*.js\" -exec sh -c 'uglifyjs \"$1\" --beautify -o \"$1\"' sh {} \\;",
