--- a/package.json
+++ b/package.json
@@ -42,22 +42,15 @@
   ],
   "dependencies": {
     "@google/generative-ai": "^0.12.0",
+    "firebase": "^10.13.1",
     "axios": "^1.7.2",
-    "bufferutil": "^4.0.8",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-<<<<<<< HEAD
-    "html-webpack-plugin": "^5.6.0",
-    "prompt-sync": "^4.2.0",
-    "socket.io": "^4.7.5",
-    "utf-8-validate": "^5.0.10"
-=======
     "socket.io": "^4.7.5"
->>>>>>> 32c5027 (modified package.json)
   },
-  "jest-disabled": {
+  "jest": {
     "moduleNameMapper": {
       "^axios$": "axios/dist/node/axios.cjs"
     }
@@ -78,6 +71,8 @@
     "typescript": "^5.4.5",
     "uglify-js": "^3.18.0",
     "webpack": "^5.92.0",
-    "webpack-cli": "^5.1.4"
+    "webpack-cli": "^5.1.4",
+    "html-webpack-plugin": "^5.6.0",
+    "@types/express": "^4.17.31"
   }
 }
