🐛MAJOR FIX: fixed some annoying bugs
1. bug where client cannot ask gemini
2. fixed the bug where the session cleanup worker spams the user, which is very annoying
3. formatted some code in the app

future update:
reformat the structure of the app because it is aweful.

--- a/package.json
+++ b/package.json
@@ -9,18 +9,17 @@
     "test:server": "node dist/testserver.js",
     "start": "node dist/index",
     "start:build": "node build/bundle.min.js",
-    "start:preview": "node dist/index",
-    "start:preview-dev": "npm run compile || true && npm run start:preview",
-    "start:watch-dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run ci'",
-    "start:dev": "nodemon -w 'dist/*' -e 'js' --exec 'npm run start:preview -- --devrun'",
-    "compile": "tsc",
+    "start:preview": "nodemon -w 'dist/*' -e 'js' --exec 'npm run start -- -d -e'",
+    "dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run compile && npm run start -- -d -e'",
+    "compile": "npx tsc",
     "compile:dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run compile'",
-    "build": "npx webpack",
+    "build": "npm run compile",
+    "bundle": "npx webpack",
     "bun:start": "node build/bundle.index.min.mjs",
     "bun:build": "node bunBundler.js",
     "bun:preview": "node src/index",
     "bun:preview-devrun": "node src/index --devrun",
-    "build:dev": "nodemon -w 'dist/*' -e 'js' --exec 'npm run build'",
+    "bundle:dev": "nodemon -w 'dist/*' -e 'js' --exec 'npm run bundle'",
     "ci": "npm run compile && npm run start:preview -- --devrun",
     "beautify": "find ./dist -name \"*.js\" -exec sh -c 'uglifyjs \"$1\" --beautify -o \"$1\"' sh {} \\;",
     "production": "npm run compile && npm run build && npm run start",
