--- a/package.json
+++ b/package.json
@@ -4,24 +4,17 @@
   "description": "A Chatbot for Facebook Messenger using Facebook Messenger Chat API and Google Gemini AI API",
   "main": "dist/index.js",
   "scripts": {
-    "ls": "echo $(ls)",
-    "test": "jest",
     "test:server": "node dist/testserver.js",
     "start": "node dist/index",
     "start:build": "node build/bundle.min.js",
     "start:preview": "nodemon -w 'dist/*' -e 'js' --exec 'npm run start -- -d -e'",
-    "dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run compile && npm run start -- -d -e'",
+    "dev": "nodemon -w 'src/*' -x 'npx tsc && npm start -- -d -e'",
     "compile": "npx tsc",
     "compile:dev": "nodemon -w 'src/*' -e 'ts' --exec 'npm run compile'",
     "build": "npm run compile",
     "bundle": "npx webpack",
-    "bun:start": "node build/bundle.index.min.mjs",
-    "bun:build": "node bunBundler.js",
-    "bun:preview": "node src/index",
-    "bun:preview-devrun": "node src/index --devrun",
     "bundle:dev": "nodemon -w 'dist/*' -e 'js' --exec 'npm run bundle'",
     "ci": "npm run compile && npm run start:preview -- --devrun",
-    "beautify": "find ./dist -name \"*.js\" -exec sh -c 'uglifyjs \"$1\" --beautify -o \"$1\"' sh {} \\;",
     "production": "npm run compile && npm run build && npm run start",
     "cleanup": "rm -rf build declarations dist && npm run production"
   },
@@ -40,14 +33,13 @@
     "messenger"
   ],
   "dependencies": {
-    "@google/generative-ai": "^0.12.0",
-    "firebase": "^10.13.1",
+    "@google/genai": "^1.10.0",
     "axios": "^1.7.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "socket.io": "^4.7.5"
+    "socket.io": "^4.8.1"
   },
   "jest": {
     "moduleNameMapper": {
@@ -62,16 +54,18 @@
   "homepage": "https://github.com/NubScript7/Google-Gemini-Messenger-Chatbot#readme",
   "devDependencies": {
     "@eslint/js": "^9.5.0",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/node": "^24.0.15",
     "eslint": "^9.5.0",
     "glob": "^7.2.3",
     "globals": "^15.6.0",
+    "html-webpack-plugin": "^5.6.0",
     "jest": "^27.5.1",
     "nodemon": "^3.1.3",
     "typescript": "^5.4.5",
-    "uglify-js": "^3.18.0",
     "webpack": "^5.92.0",
     "webpack-cli": "^5.1.4",
-    "html-webpack-plugin": "^5.6.0",
-    "@types/express": "^4.17.21"
+    "webpack-node-externals": "^3.0.0"
   }
 }
